CI-79 feat:work in progress